force-app/main/default/objects/Litify_Data_Manipulation__c/Litify_Data_Manipulation__c.object-meta.xml
<CustomObject>
    <description>Store data manipulations for Litify project</description>
    <label>Litify Data Manipulation</label>
    <nameField>
        <label>Litify Data Manipulation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Litify Data Manipulations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>