force-app/main/default/objects/Litify_Data_Manipulation__c/fields/Character_Count_Map__c.field-meta.xml
<CustomField>
    <fullName>Character_Count_Map__c</fullName>
    <label>Character Count Map</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>