force-app/main/default/objects/Litify_Data_Manipulation__c/fields/Decoded__c.field-meta.xml
<CustomField>
    <fullName>Decoded__c</fullName>
    <description>Value decoded from base 64 Input</description>
    <label>Decoded</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>