force-app/main/default/objects/Litify_Data_Manipulation__c/fields/Encoded__c.field-meta.xml
<CustomField>
    <fullName>Encoded__c</fullName>
    <description>Base64 Encoded String INput</description>
    <label>Encoded</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>