force-app/main/default/objects/Litify_Data_Manipulation__c/fields/Reversed__c.field-meta.xml
<CustomField>
    <fullName>Reversed__c</fullName>
    <label>Reversed</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>